`SnoopPrecompile` startup method

--- a/Project.toml
+++ b/Project.toml
@@ -8,3 +8,4 @@ OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 ReadableRegex = "cbbcb084-453d-4c4c-b292-e315607ba6a4"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
